Slightly improved article preview by moving category and keywords below body textarea and applied width changes to prevent wrapping (closes #476, #479)
git-svn-id: http://svn.typosphere.org/typo/trunk@814 820eb932-12ee-0310-9ca8-eeb645f39767

--- a/public/stylesheets/administration.css
+++ b/public/stylesheets/administration.css
@@ -287,7 +287,7 @@ label {
   border: 4px double #ccc;
   padding: 5px;
   z-index: 9999;
-  width: 50%;
+  width: 48%;
   float: right;
   clear: right;
   margin-bottom: 10px;
